Fixed dangerous check.